applications/hello-world/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: avon.orb.local
      http:
        paths:
          - path: /hello-world
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  name: http
